--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,8 @@
     --accent-color: #2196F3;
     --white-color: #FFFFFF;
     --main-title-color: #FFFFFF;
+    --transition-time: 250ms;
+    --cubic-func: cubic-bezier(0.4, 0, 0.2, 1);
 
     --item: 3;
     --space: 30px
@@ -21,7 +23,7 @@ ul{
 
 img{
     display: block;
-    max-width: 100%;
+    width: 100%;
     height: auto;
 }
 
@@ -72,8 +74,6 @@ body{
 
 .header{
     border-bottom: 1px solid #ECECEC;
-    padding-top: 24px;
-    padding-bottom: 24px;
 }
 
 .head-logo, 
@@ -82,6 +82,7 @@ body{
     font-weight: 700;
     font-size: 26px;
     line-height: 1.19;
+    letter-spacing: 0.02em;
 
     color: var(--accent-color);
 }
@@ -90,14 +91,18 @@ body{
 }
 
 .header-nav-item{
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding-top: 32px;
+    padding-bottom: 32px;
 
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
+    letter-spacing: 0.02em;
 
     color: var(--main-color);
+    position: relative;
+
+    transition: color var(--transition-time) var(--cubic-func);
 }
 
 .header-nav-item:hover,
@@ -143,8 +148,11 @@ body{
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
+    letter-spacing: 0.02em;
 
     color: var(--second-color);
+
+    transition: color var(--transition-time) var(--cubic-func);
 }
 
 .header-icon{
@@ -162,6 +170,18 @@ body{
     color: var(--accent-color);
 }
 
+.current::after{
+    content: "";
+    position: absolute;
+    display: block;
+
+    bottom: -1px;
+    width: 100%;
+    height: 4px;
+    
+    background-color: var(--accent-color);
+    border-radius: 2px;
+}
 
 /* ---------Footer----------*/
 
@@ -197,6 +217,8 @@ body{
     line-height: 1.71;
 
     color: rgba(255, 255, 255, 0.6);
+
+    transition: color var(--transition-time) var(--cubic-func);
 }
 .footer-contact:hover,
 .footer-contact:focus {
@@ -259,6 +281,8 @@ body{
     border-radius: 50%;
     background-color: rgba(255, 255, 255, 0.1);
     color: var(--white-color);
+
+    transition: background-color var(--transition-time) var(--cubic-func);
 }
 
 .footer-soc-icon {
@@ -321,6 +345,8 @@ body{
     min-width: 200px;
     min-height: 50px;
     
+    transition: box-shadow var(--transition-time) var(--cubic-func),
+    background-color var(--transition-time) var(--cubic-func);
 }
 
 .hero-button:hover,
@@ -397,6 +423,35 @@ body{
 .work-item{
     flex-basis: calc(100% / var(--item) - var(--space));
     margin: calc(var(--space) / 2);
+
+    padding-right: 0;
+
+    position: relative;
+}
+
+.work-description{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    position: absolute;
+    bottom: 0;
+
+    width: 100%;
+    min-height: 70px;
+
+    background-color: rgba(47, 48, 58, 0.8);
+}
+
+.work-description-title{
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    text-align: center;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    
+    color: var(--white-color);
 }
 
 .section-title{
@@ -486,6 +541,9 @@ body{
     width: 100%;
     border-radius: 50%;
     color: #AFB1B8;
+
+    transition: color var(--transition-time) var(--cubic-func),
+    background-color var(--transition-time) var(--cubic-func);
 }
 
 .team-soc-icon{
@@ -525,6 +583,9 @@ body{
     border: 1px solid #AFB1B8;
     border-radius: 4px;
     color: #AFB1B8;
+
+    transition: color var(--transition-time) var(--cubic-func),
+    border var(--transition-time) var(--cubic-func);
 }
 
 .client-icon{
@@ -563,6 +624,9 @@ body{
     color: var(--main-color);
     border: none;
     
+    transition: box-shadow var(--transition-time) var(--cubic-func),
+     background-color var(--transition-time) var(--cubic-func),
+     color var(--transition-time) var(--cubic-func);
 }
 
 .portfolio-button-item:not(:last-child) {
@@ -601,9 +665,47 @@ body{
     margin: calc(var(--space) / 2);
 }
 
+.portfolio-link{
+    transition: box-shadow var(--transition-time) var(--cubic-func);
+}
+
 .portfolio-link:hover,
 .portfolio-link:focus{
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.portfolio-link:hover .project-description,
+.portfolio-link:focus .project-description {
+    transform: translateY(0);
+}
+
+.project-box{
+    position: relative;
+    overflow: hidden;
+}
+
+.project-description{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    position: absolute;
+    top: 0;
+
+    padding-left: 24px;
+
+    height: 100%;
+    width: 100%;
+
+    font-size: 18px;
+    line-height: 1.56;
+    letter-spacing: 0.03em;
+    
+    transform: translateY(101%);
+    transition: transform var(--transition-time) var(--cubic-func);
+
+    color: var(--white-color);
+    background-color: rgba(33, 150, 243, 0.9);
 }
 
 .portfolio-title{
@@ -621,4 +723,66 @@ body{
     letter-spacing: 0.03em;
 
     color: var(--second-color);
+}
+
+/* -----------Backdrop----------- */
+.backdrop{
+    position: fixed;
+
+    top: 0;
+    left: 0;
+
+    width: 100%;
+    height: 100%;
+
+    transition: opacity var(--transition-time) linear, visibility var(--transition-time) linear;
+
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
+.backdrop.is-hidden .modal{
+    transform: translate(-50%, -50%) scale(3) rotate(-90deg);
+}
+
+.modal{
+    position: absolute;
+
+    top: 50%;
+    left: 50%;
+
+    transform: translate(-50%, -50%) scale(1) rotate(0);
+    transition: transform var(--transition-time) linear;
+    
+    width: 528px;
+    min-height: 581px;
+
+    background-color: var(--white-color);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px
+}
+
+.modal-close-btn{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    position: absolute;
+
+    top: 8px;
+    right: 8px;
+
+    width: 30px;
+    height: 30px;
+
+    border-radius: 50%;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    background-color: var(--white-color);
+
+    cursor: pointer;
+}
+
+.is-hidden{
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
 }
