--- a/css/styles.css
+++ b/css/styles.css
@@ -741,7 +741,7 @@ body{
 }
 
 .backdrop.is-hidden .modal{
-    transform: translate(-50%, -50%) scale(3) rotate(-90deg);
+    transform: translate(-50%, -50%) scale(3);
 }
 
 .modal{
@@ -750,7 +750,7 @@ body{
     top: 50%;
     left: 50%;
 
-    transform: translate(-50%, -50%) scale(1) rotate(0);
+    transform: translate(-50%, -50%) scale(1);
     transition: transform var(--transition-time) linear;
     
     width: 528px;
